--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" type="image/ico" href="/static/favicon.ico"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/inhtml.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/plugins.min.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
